<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tango</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usernameText">UserName</string>
    <string name="passwordText">Password</string>
    <string name="loginButton">Login</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>

</resources>
